--- a/jp420/curriculo.html
+++ b/jp420/curriculo.html
@@ -8,46 +8,64 @@
         body {
             font-family: Arial, sans-serif;
             margin: 40px;
+            background-color: #f4f4f9;
             color: #333;
         }
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
         h1 {
+            font-size: 2.5em;
             color: #2c3e50;
         }
-        .info {
-            margin-bottom: 10px;
+        .contact-info, .education, .skills {
+            margin-bottom: 20px;
+        }
+        .contact-info p, .education p, .skills p {
+            font-size: 1.1em;
+        }
+        .section-title {
+            font-size: 1.4em;
+            color: #34495e;
+            border-bottom: 2px solid #2980b9;
+            padding-bottom: 5px;
+        }
+        footer {
+            text-align: center;
+            font-size: 0.9em;
+            color: #7f8c8d;
         }
     </style>
 </head>
 <body>
-    <h1>Currículo de João Pedro Guimarães</h1>
-    
-    <div class="info">
-        <strong>Nome:</strong> João Pedro Guimarães
-    </div>
-    
-    <div class="info">
-        <strong>Altura:</strong> 1.73m
-    </div>
 
-    <h2>Informações de Contato</h2>
-    <div class="info">
-        <strong>Email:</strong> joao.pedro@email.com
-    </div>
+    <header>
+        <h1>João Pedro Guimarães</h1>
+        <p>Email: <a href="mailto:guimaraesjoao819@gmail.com">guimaraesjoao819@gmail.com</a></p>
+    </header>
 
-    <h2>Experiência Profissional</h2>
-    <div class="info">
-        <strong>Cargo:</strong> Desenvolvedor Web
-    </div>
-    <div class="info">
-        <strong>Empresa:</strong> XYZ Tecnologia
-    </div>
+    <section class="objective">
+        <h2 class="section-title">Objetivo Profissional</h2>
+        <p>Quero ser o melhor em TI na empresa.</p>
+    </section>
 
-    <h2>Educação</h2>
-    <div class="info">
-        <strong>Curso:</strong> Ciência da Computação
-    </div>
-    <div class="info">
-        <strong>Instituição:</strong> Universidade ABC
-    </div>
+    <section class="education">
+        <h2 class="section-title">Formação Acadêmica</h2>
+        <p><strong>Curso:</strong> TI e Desenvolvimento de Software</p>
+        <p><strong>Instituição:</strong> EEMB</p>
+        <p><strong>Ano de Conclusão:</strong> 2025</p>
+    </section>
+
+    <section class="skills">
+        <h2 class="section-title">Habilidades</h2>
+        <p><strong>Habilidades Técnicas:</strong> Programação em geral.</p>
+        <p><strong>Idiomas:</strong> Português (Fluente) | Inglês (Básico)</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 João Pedro Guimarães - Todos os direitos reservados.</p>
+    </footer>
+
 </body>
 </html>
